ファビコン更新

--- a/list/templates/base.html
+++ b/list/templates/base.html
@@ -6,6 +6,7 @@
     <title>NewElegant</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link rel="icon" href="{% static 'images/new.png' %}" type="image/png">
 </head>
 <body>
     <!-- ヘッダー画像 -->
