--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -250,3 +250,17 @@ footer p {
     position: relative; /* z-index を有効化するために設定 */
     z-index: 2; /* 泡や星の上に表示 */
 }
+
+@keyframes float {
+    0% {
+        transform: translateY(100vh);
+        opacity: 0;
+    }
+    25% {
+        opacity: 1;
+    }
+    100% {
+        transform: translateY(-100vh);
+        opacity: 0;
+    }
+}
