--- a/list/templates/index.html
+++ b/list/templates/index.html
@@ -20,7 +20,7 @@ Home - NewElegant
 
     <div style="position: relative; padding-top: 56.25%; margin-top: 30px;">
         <iframe 
-            src="https://player.vimeo.com/video/1056653455?h=8206978372"
+            src="static/images/b.mp4"
             style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
             frameborder="0" 
             allowfullscreen
