--- a/list/templates/base.html
+++ b/list/templates/base.html
@@ -11,7 +11,7 @@
 <body>
     <!-- ヘッダー画像 -->
     <div class="header-image">
-        <img src="{% static 'images/logo.png' %}" alt="NewElegantのロゴ">
+        <img src="{% static 'images/logo5.png' %}" alt="NewElegantのロゴ">
     </div>
 
     <!-- 泡背景 -->
