レスポンスシブ対応

--- a/list/templates/base.html
+++ b/list/templates/base.html
@@ -10,8 +10,10 @@
 </head>
 <body>
     <!-- ヘッダー画像 -->
-    <div class="header-image">
-        <img src="{% static 'images/logo5.png' %}" alt="NewElegantのロゴ">
+    <div style="max-width: 10000px; margin: 0 auto;">
+        <div class="header-image" style="text-align: center;">
+            <img src="{% static 'images/logo5.png' %}" alt="NewElegantのロゴ" style="width: 1000%; height: auto;">
+        </div>
     </div>
 
     <!-- 泡背景 -->
