レスポンスシブ対応

--- a/list/templates/base.html
+++ b/list/templates/base.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <!-- ヘッダー画像 -->
-    <div style="max-width: 100px; margin: 0 auto;">
+    <div style="max-width: 100%; margin: 0 auto;">
         <div class="header-image" style="text-align: center;">
-            <img src="{% static 'images/logo5.png' %}" alt="NewElegantのロゴ" style="width: 100%; height: auto;">
+            <img src="{% static 'images/logo5.png' %}" alt="NewElegantのロゴ" style="width: 100%; height: 10000%;">
         </div>
     </div>
 
