--- a/static/css/therapists.css
+++ b/static/css/therapists.css
@@ -67,3 +67,10 @@
     font-size: 14px;
     display: inline-block;
 }
+
+.schedule-title {
+    text-align: center;
+    margin-bottom: 20px;
+    font-size: 24px;
+    color: #333;
+}
