--- a/list/templates/index.html
+++ b/list/templates/index.html
@@ -136,6 +136,11 @@ Home - NewElegant
         {% endfor %}
     </div>
 </div>
+<div style="text-align: center;">
+    <a href="https://eslove.jp/kanto/kanagawa/shoplist" target="_blank"><img src="https://eslove.jp/eslove_front_theme/banner/banner_200x40.jpg" alt="エステラブ"/></a>
+    </a>
+  </div>
+
 
 
 {% endblock %}
