--- a/list/templates/schedule.html
+++ b/list/templates/schedule.html
@@ -39,7 +39,8 @@
                     <p>ヒップ: {{ therapist.hip }}</p>
 
                     <!-- スケジュール -->
-                    <p class="schedule">出勤予定</p>
+                    <a href="#" class="btn btn-schedule">出勤予定</a>
+                    <a href="{% url 'therapist-profile' therapist.id %}" class="btn btn-primary">詳細を見る</a>
 
                     <!-- 動画部分 -->
                     {% if therapist.video %}
