--- a/list/templates/index.html
+++ b/list/templates/index.html
@@ -140,6 +140,10 @@ Home - NewElegant
     <a href="https://eslove.jp/kanto/kanagawa/shoplist" target="_blank"><img src="https://eslove.jp/eslove_front_theme/banner/banner_200x40.jpg" alt="エステラブ"/></a>
     </a>
   </div>
+  <div style="text-align: center;">
+  <a href="https://eslove.jp/kanto/kanagawa/shoplist" target="_blank"><img src="https://eslove.jp/eslove_front_theme/banner/banner_200x40.gif" alt="エステラブ"/></a>
+</a>
+</div>
 
 
 
