--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -286,15 +286,19 @@ footer p {
     overflow: hidden;
     position: relative;
     background-color: #000;
-    margin-top: 0;
+    margin: 0;
+    padding: 0;
+    line-height: 0;
 }
 
 .header-image img {
     width: 100%;
     height: 400px;
     display: block;
-    margin: 0 auto;
+    margin: 0;
+    padding: 0;
     object-fit: cover;
+    vertical-align: bottom;
 }
 
 /* レスポンシブ対応 */
