リンク追加

--- a/list/templates/index.html
+++ b/list/templates/index.html
@@ -143,6 +143,7 @@ Home - NewElegant
   <div style="text-align: center;">
   <a href="https://eslove.jp/kanto/kanagawa/shoplist" target="_blank"><img src="https://eslove.jp/eslove_front_theme/banner/banner_200x40.gif" alt="エステラブ"/></a>
 </a>
+<a href="https://esthe-r.com/?m=shop/index&region=3&pref=14&area=49"><img src="https://esthe-r.com/images/user/bnr_200x040.jpg" alt="神奈川県横浜・関内・新横浜のメンズエステ求人・高収入アルバイト「メンエスリクルート」" /></a>
 </div>
 
 
